1. Add a GET /posts/hello unprotected endpoint; 2. Add createdAt and lastUsedAt field to the user information
