# core-program/week-9/post-central/routes/postRoutes.js
@@ -2,6 +2,7 @@ import express from 'express';
 import {
   createPost,
   deletePost,
+  getHello,
   getMyPosts,
   updatePost,
 } from '../controllers/postController.js';
@@ -9,6 +10,7 @@ import { authenticate } from '../middleware/auth.js';
 
 const router = express.Router();
 
+router.get('/hello', getHello);
 router.get('/me', authenticate, getMyPosts);
 router.post('/', authenticate, createPost);
 router.put('/:id', authenticate, updatePost);
